--- a/src/features/home/home.css
+++ b/src/features/home/home.css
@@ -1,11 +1,12 @@
 .home {
   overflow: hidden;
-  --translate: 80px;
-  --translate-reversed: -80px;
+  --translate: var(--inner-padding);
+  --translate-reversed: calc(-1 * var(--inner-padding));
   --translate-left: translateX(var(--translate-reversed));
   --translate-right: translateX(var(--translate));
   --grey-color: #f5f5f7;
   --grid-columns: 1fr 1fr;
+  --max-img-width: auto;
 }
 
 .home h3 {
@@ -20,10 +21,15 @@
   margin: 20px 0;
 }
 
-.home p,
-.home article {
+.home p {
   font-size: 20px;
   line-height: 23px;
+}
+
+@media screen and (max-width: 480px) {
+  .home__text-block p {
+    padding-right: 40px;
+  }
 }
 
 .home .grid {
@@ -57,6 +63,12 @@
   color: var(--primary-font-color);
 }
 
+@media screen and (max-width: 480px) {
+  .home__header__links a {
+    display: none;
+  }
+}
+
 .home__header__links button {
   padding: 10px 16px;
   font-size: 12px;
@@ -82,7 +94,19 @@
 }
 
 .home__banner .container p {
-  margin-bottom: 173px;
+  margin-bottom: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .home__banner .container h1 {
+  }
+  .home__banner .container p {
+    margin-bottom: 50px;
+  }
+
+  .home__banner .container.grid {
+    grid-template-columns: 5fr 2fr;
+  }
 }
 
 .home__banner__left-column,
@@ -108,6 +132,12 @@
   margin-bottom: 416px;
 }
 
+@media screen and (max-width: 768px) {
+  .home__preview .container p {
+    margin-bottom: 50px;
+  }
+}
+
 /* text-block */
 
 .home__text-block .container {
@@ -115,12 +145,51 @@
   grid-column-gap: 78px;
 }
 
+@media screen and (max-width: 768px) {
+  .home__text-block .container {
+    margin-bottom: 50px;
+  }
+}
+
+.home__text-block .container div {
+  align-self: center;
+}
+
+.home__text-block .container h3 {
+  margin-top: 0;
+}
+
 .home__text-block .container img {
   transform: var(--translate-right);
+  max-width: var(--max-img-width);
+  height: auto;
 }
 
 .home__text-block.reversed .container img {
   transform: var(--translate-left);
+}
+
+@media screen and (max-width: 1024px) {
+  .home {
+    --max-img-width: 350px;
+  }
+
+  .home__text-block .container {
+    grid-column-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home__text-block .container {
+    grid-column-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .home {
+    --grid-columns: 1fr;
+    --max-img-width: 100vw;
+  }
 }
 
 /* action */
@@ -141,6 +210,22 @@
   margin: 0 auto 550px auto;
 }
 
+@media screen and (max-width: 768px) {
+  .home__action__buttons {
+    margin-bottom: 50px;
+  }
+
+  .home__action__buttons .primary {
+    padding: 16px 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .home__action__buttons .primary {
+    padding: 16px;
+  }
+}
+
 /* footer */
 
 .home__footer {
@@ -149,6 +234,7 @@
 
 .home__footer .container {
   height: 197px;
+  padding-bottom: 20px;
 }
 
 .home__footer .container p {
@@ -164,4 +250,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+
+@media screen and (max-width: 700px) {
+  .home__footer__right-column {
+    justify-content: flex-start;
+  }
 }
