Add contantWrapper, move repeating logic into it

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,11 @@
 .header {
   border-bottom: 1px solid #21232934;
   background: #f5f5f7;
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
+  background: #f5f5f7;
+  z-index: 1000;
 }
 
 .header .container {
