Add login form, user logo render

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,6 +19,15 @@
   height: 62px;
 }
 
+.header__links {
+	display: flex;
+	align-items: center;
+}
+
+.header__links img {
+	margin-left: 57px;
+}
+
 .header__links a {
   margin-left: 24px;
   font-size: 12px;
