--- a/src/features/courses/courses.css
+++ b/src/features/courses/courses.css
@@ -11,6 +11,22 @@
   width: 200px;
 }
 
+@media screen and (max-width: 1024px) {
+  .courses__main {
+    grid-template-columns: 1fr;
+  }
+
+  .courses__main__filters {
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .courses__main__filters .MuiInputBase-formControl {
+	width: calc(80vw / 4);
+	margin-right: 20px;
+  }
+}
+
 .courses__main__list .course {
   display: grid;
   grid-template-columns: 1fr auto;
@@ -18,6 +34,12 @@
   box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
   padding: 32px;
   border-radius: 16px;
+  margin-bottom: 24px;
+}
+
+.courses-empty {
+	opacity: .5;
+	text-align: center;
 }
 
 .courses__main__list .course h3 {
