--- a/src/components/ModalBody.css
+++ b/src/components/ModalBody.css
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
   background: white;
   min-width: 430px;
-  width: 430px;
+  width: auto;
   min-height: 280px;
   border-radius: 16px;
   box-sizing: border-box;
