--- a/src/features/courses/courses.css
+++ b/src/features/courses/courses.css
@@ -1,6 +1,5 @@
 .courses__main {
   display: grid;
-  grid-template-columns: auto 1fr;
   grid-column-gap: 40px;
   padding-bottom: 40px;
 }
@@ -11,25 +10,9 @@
   width: 200px;
 }
 
-@media screen and (max-width: 1024px) {
-  .courses__main {
-    grid-template-columns: 1fr;
-  }
-
-  .courses__main__filters {
-    flex-direction: row;
-    width: 100%;
-  }
-
-  .courses__main__filters .MuiInputBase-formControl {
-	width: calc(80vw / 4);
-	margin-right: 20px;
-  }
-}
-
-.courses__main__list .course {
+.courses__main .course {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 3fr 1fr;
   grid-column-gap: 50px;
   box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
   padding: 32px;
@@ -38,11 +21,11 @@
 }
 
 .courses-empty {
-	opacity: .5;
-	text-align: center;
+  opacity: 0.5;
+  text-align: center;
 }
 
-.courses__main__list .course h3 {
+.courses__main .course h3 {
   font-size: 20px;
   margin-top: 0;
 }
@@ -53,23 +36,13 @@
   font-weight: bold;
 }
 
-.courses__main__list .course p {
+.courses__main .course p {
   font-size: 14px;
   line-height: 16px;
   opacity: 0.8;
 }
 
-.courses__main__list .course span {
+.courses__main .course span {
   font-size: 12px;
   line-height: 14px;
-}
-
-.course__left-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.course__left-column button {
-  margin-top: auto;
-  width: 210px;
 }
