--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,6 +26,7 @@
 
 .header__links img {
   margin-left: 57px;
+  cursor: pointer;
 }
 
 .header__links span {
@@ -47,4 +48,29 @@
   font-size: 12px;
   line-height: 14px;
   margin-left: 24px;
+}
+
+.header .user {
+  position: relative;
+}
+
+.header .popup {
+  width: 185px;
+  background: white;
+  box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
+  padding: 12px 16px;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header .popup span {
+  font-size: 12px;
+  line-height: 20px;
+  font-weight: bold;
+  margin-left: 0;
 }
